--- a/note/afplay.html
+++ b/note/afplay.html
@@ -48,7 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<hr/>
+<div class="top-ad">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <section class="content">
 <header>
 <h1>afplay</h1>
@@ -57,7 +68,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org222b711">사용법</a></li>
+<li><a href="#org43d59d9">사용법</a></li>
 </ul>
 </div>
 </div>
@@ -67,9 +78,9 @@ afplay는 Audio File Play의 약자로
 오디오 파일 플레이어 유틸리티다.
 </p>
 
-<div id="outline-container-org222b711" class="outline-2">
-<h2 id="org222b711">사용법</h2>
-<div class="outline-text-2" id="text-org222b711">
+<div id="outline-container-org43d59d9" class="outline-2">
+<h2 id="org43d59d9">사용법</h2>
+<div class="outline-text-2" id="text-org43d59d9">
 <div class="org-src-container">
 <pre class="src src-bash">afplay /foo/bar/audio.mp3
 </pre>
