--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -48,7 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<hr/>
+<div class="top-ad">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <section class="content">
 <header>
 <h1>caffeinate</h1>
@@ -57,11 +68,11 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org8030563">사용법</a>
+<li><a href="#orga359427">사용법</a>
 <ul>
-<li><a href="#org495f041">무제한 잠자기 방지</a></li>
-<li><a href="#orgf50e355">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#org5fc406f">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#org1a8a9d3">무제한 잠자기 방지</a></li>
+<li><a href="#orga657492">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#org2f957c4">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -72,13 +83,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org8030563" class="outline-2">
-<h2 id="org8030563">사용법</h2>
-<div class="outline-text-2" id="text-org8030563">
+<div id="outline-container-orga359427" class="outline-2">
+<h2 id="orga359427">사용법</h2>
+<div class="outline-text-2" id="text-orga359427">
 </div>
-<div id="outline-container-org495f041" class="outline-3">
-<h3 id="org495f041">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org495f041">
+<div id="outline-container-org1a8a9d3" class="outline-3">
+<h3 id="org1a8a9d3">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org1a8a9d3">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -89,9 +100,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-orgf50e355" class="outline-3">
-<h3 id="orgf50e355">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-orgf50e355">
+<div id="outline-container-orga657492" class="outline-3">
+<h3 id="orga657492">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-orga657492">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -102,9 +113,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org5fc406f" class="outline-3">
-<h3 id="org5fc406f">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org5fc406f">
+<div id="outline-container-org2f957c4" class="outline-3">
+<h3 id="org2f957c4">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org2f957c4">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
