--- a/note/dockerfile.html
+++ b/note/dockerfile.html
@@ -48,7 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<hr/>
+<div class="top-ad">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <section class="content">
 <header>
 <h1>Dockerfile</h1>
@@ -57,9 +68,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org81c1c1c">평범한 스펙 예제</a></li>
-<li><a href="#orgb87dab2">사용자 지정</a></li>
-<li><a href="#org8f9c68a">관련된 글들</a></li>
+<li><a href="#org61b2ab4">평범한 스펙 예제</a></li>
+<li><a href="#org8e112f5">사용자 지정</a></li>
+<li><a href="#org8f7e4bb">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -68,9 +79,9 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 특수한 DSL 스크립트 언어로 작성하는 스펙 파일이다.
 </p>
 
-<div id="outline-container-org81c1c1c" class="outline-2">
-<h2 id="org81c1c1c">평범한 스펙 예제</h2>
-<div class="outline-text-2" id="text-org81c1c1c">
+<div id="outline-container-org61b2ab4" class="outline-2">
+<h2 id="org61b2ab4">평범한 스펙 예제</h2>
+<div class="outline-text-2" id="text-org61b2ab4">
 <div class="org-src-container">
 <pre class="src src-text">FROM debian:buster
 
@@ -115,9 +126,9 @@ ENTRYPOINT ["/usr/local/bin/app"]
 </p>
 </div>
 </div>
-<div id="outline-container-orgb87dab2" class="outline-2">
-<h2 id="orgb87dab2">사용자 지정</h2>
-<div class="outline-text-2" id="text-orgb87dab2">
+<div id="outline-container-org8e112f5" class="outline-2">
+<h2 id="org8e112f5">사용자 지정</h2>
+<div class="outline-text-2" id="text-org8e112f5">
 <p>
 특정 사용자로 굴리고(?) 싶다면 <code>USER</code> 커맨드를 쓸 수 있다.
 </p>
@@ -132,9 +143,9 @@ USER someuser
 </p>
 </div>
 </div>
-<div id="outline-container-org8f9c68a" class="outline-2">
-<h2 id="org8f9c68a">관련된 글들</h2>
-<div class="outline-text-2" id="text-org8f9c68a">
+<div id="outline-container-org8f7e4bb" class="outline-2">
+<h2 id="org8f7e4bb">관련된 글들</h2>
+<div class="outline-text-2" id="text-org8f7e4bb">
 <ul class="org-ul">
 <li><a href="docker.html">Docker</a></li>
 <li><a href="docker-compose.html">Docker Compose</a></li>
