--- a/note/macos.html
+++ b/note/macos.html
@@ -48,7 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<hr/>
+<div class="top-ad">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <section class="content">
 <header>
 <h1>macOS</h1>
@@ -57,9 +68,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org7053d0e">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#org0af78a3">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#org0ffe2e3">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#org7513186">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#org89eb53e">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#org5218700">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -84,17 +95,17 @@ macOS는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org7053d0e" class="outline-2">
-<h2 id="org7053d0e">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org7053d0e">
+<div id="outline-container-org7513186" class="outline-2">
+<h2 id="org7513186">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-org7513186">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-org0af78a3" class="outline-2">
-<h2 id="org0af78a3">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-org0af78a3">
+<div id="outline-container-org89eb53e" class="outline-2">
+<h2 id="org89eb53e">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-org89eb53e">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -114,9 +125,9 @@ macOS는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-org0ffe2e3" class="outline-2">
-<h2 id="org0ffe2e3">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-org0ffe2e3">
+<div id="outline-container-org5218700" class="outline-2">
+<h2 id="org5218700">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-org5218700">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
