--- a/note/python.html
+++ b/note/python.html
@@ -48,7 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<hr/>
+<div class="top-ad">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <section class="content">
 <header>
 <h1>Python</h1>
@@ -57,19 +68,19 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgbfe2f28">설치</a></li>
-<li><a href="#org682bb9e">버전 별 정리</a>
+<li><a href="#org7403f0c">설치</a></li>
+<li><a href="#orga268268">버전 별 정리</a>
 <ul>
-<li><a href="#org2f8684e">3.8</a></li>
+<li><a href="#org0680e36">3.8</a></li>
 </ul>
 </li>
-<li><a href="#org9b050f8">메모</a>
+<li><a href="#orgc2de90a">메모</a>
 <ul>
-<li><a href="#orgfabf8df">List Comprehension</a></li>
-<li><a href="#org4ba97a9">파일 혹은 디렉토리(폴더) 관련</a></li>
+<li><a href="#orgc3e28be">List Comprehension</a></li>
+<li><a href="#orgc13be19">파일 혹은 디렉토리(폴더) 관련</a></li>
 </ul>
 </li>
-<li><a href="#org0cc0243">외부 링크</a></li>
+<li><a href="#org15ee89a">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -81,9 +92,9 @@ gtag('config', 'UA-44534026-1');
 언어라는 점이 가장 큰 특징이다.
 </p>
 
-<div id="outline-container-orgbfe2f28" class="outline-2">
-<h2 id="orgbfe2f28">설치</h2>
-<div class="outline-text-2" id="text-orgbfe2f28">
+<div id="outline-container-org7403f0c" class="outline-2">
+<h2 id="org7403f0c">설치</h2>
+<div class="outline-text-2" id="text-org7403f0c">
 <p>
 <a href="macos.html">macOS</a> 의 경우
 <a href="homebrew.html">Homebrew</a> 를 통해 설치하거나
@@ -103,13 +114,13 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org682bb9e" class="outline-2">
-<h2 id="org682bb9e">버전 별 정리</h2>
-<div class="outline-text-2" id="text-org682bb9e">
+<div id="outline-container-orga268268" class="outline-2">
+<h2 id="orga268268">버전 별 정리</h2>
+<div class="outline-text-2" id="text-orga268268">
 </div>
-<div id="outline-container-org2f8684e" class="outline-3">
-<h3 id="org2f8684e">3.8</h3>
-<div class="outline-text-3" id="text-org2f8684e">
+<div id="outline-container-org0680e36" class="outline-3">
+<h3 id="org0680e36">3.8</h3>
+<div class="outline-text-3" id="text-org0680e36">
 <dl class="org-dl">
 <dt><code>:=</code> (Walrus) 오페레이터</dt><dd>좁은(?) 지역 변수.
 <a href="swift.html">Swift</a> 의 <code>if let</code> 과 용도가 비슷하다.
@@ -126,25 +137,25 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org9b050f8" class="outline-2">
-<h2 id="org9b050f8">메모</h2>
-<div class="outline-text-2" id="text-org9b050f8">
+<div id="outline-container-orgc2de90a" class="outline-2">
+<h2 id="orgc2de90a">메모</h2>
+<div class="outline-text-2" id="text-orgc2de90a">
 </div>
-<div id="outline-container-orgfabf8df" class="outline-3">
-<h3 id="orgfabf8df">List Comprehension</h3>
-<div class="outline-text-3" id="text-orgfabf8df">
+<div id="outline-container-orgc3e28be" class="outline-3">
+<h3 id="orgc3e28be">List Comprehension</h3>
+<div class="outline-text-3" id="text-orgc3e28be">
 </div>
 <ul class="org-ul">
-<li><a id="org5111b29"></a>Map<br />
-<div class="outline-text-4" id="text-org5111b29">
+<li><a id="orgeddd447"></a>Map<br />
+<div class="outline-text-4" id="text-orgeddd447">
 <div class="org-src-container">
 <pre class="src src-python">[x * x <span style="color: #51afef;">for</span> x <span style="color: #51afef;">in</span> somelist]
 </pre>
 </div>
 </div>
 </li>
-<li><a id="org8102a63"></a>Filter<br />
-<div class="outline-text-4" id="text-org8102a63">
+<li><a id="org574bfac"></a>Filter<br />
+<div class="outline-text-4" id="text-org574bfac">
 <div class="org-src-container">
 <pre class="src src-python">[x <span style="color: #51afef;">for</span> x <span style="color: #51afef;">in</span> somelist <span style="color: #51afef;">if</span> iswhat(x)]
 </pre>
@@ -153,13 +164,13 @@ gtag('config', 'UA-44534026-1');
 </li>
 </ul>
 </div>
-<div id="outline-container-org4ba97a9" class="outline-3">
-<h3 id="org4ba97a9">파일 혹은 디렉토리(폴더) 관련</h3>
-<div class="outline-text-3" id="text-org4ba97a9">
+<div id="outline-container-orgc13be19" class="outline-3">
+<h3 id="orgc13be19">파일 혹은 디렉토리(폴더) 관련</h3>
+<div class="outline-text-3" id="text-orgc13be19">
 </div>
 <ul class="org-ul">
-<li><a id="orgc04c954"></a>경로에서 파일명만 얻기<br />
-<div class="outline-text-4" id="text-orgc04c954">
+<li><a id="org5f2fe47"></a>경로에서 파일명만 얻기<br />
+<div class="outline-text-4" id="text-org5f2fe47">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.basename(<span style="color: #98be65;">'/foo/bar/test.txt'</span>)
@@ -168,8 +179,8 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </li>
-<li><a id="orgb018580"></a>파일명에서 확장자 분리하기<br />
-<div class="outline-text-4" id="text-orgb018580">
+<li><a id="org3779136"></a>파일명에서 확장자 분리하기<br />
+<div class="outline-text-4" id="text-org3779136">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.splitext(<span style="color: #98be65;">'test.txt'</span>)
@@ -183,8 +194,8 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </li>
-<li><a id="orgabd575d"></a>파일 혹은 디렉토리 구분하기<br />
-<div class="outline-text-4" id="text-orgabd575d">
+<li><a id="org4a927b0"></a>파일 혹은 디렉토리 구분하기<br />
+<div class="outline-text-4" id="text-org4a927b0">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.path.isfile(<span style="color: #98be65;">'/foo/bar/some/file.txt'</span>)
@@ -195,8 +206,8 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </li>
-<li><a id="orga845691"></a>디렉토리 안의 파일 목록 얻기<br />
-<div class="outline-text-4" id="text-orga845691">
+<li><a id="org9f2c839"></a>디렉토리 안의 파일 목록 얻기<br />
+<div class="outline-text-4" id="text-org9f2c839">
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
 &gt;&gt;&gt; os.listdir(<span style="color: #98be65;">'.'</span>)
@@ -208,9 +219,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org0cc0243" class="outline-2">
-<h2 id="org0cc0243">외부 링크</h2>
-<div class="outline-text-2" id="text-org0cc0243">
+<div id="outline-container-org15ee89a" class="outline-2">
+<h2 id="org15ee89a">외부 링크</h2>
+<div class="outline-text-2" id="text-org15ee89a">
 <ul class="org-ul">
 <li><a target="_blank" href="https://seorenn.tistory.com/76">Python에 F-string 이라는 게 있었다?</a></li>
 <li><a target="_blank" href="https://seorenn.tistory.com/77">Python 3 정적 타이핑 소개 및 소감(?)</a></li>
