--- a/note/magit.html
+++ b/note/magit.html
@@ -48,7 +48,18 @@ gtag('config', 'UA-44534026-1');
 </nav>
 </div>
 </header>
-<hr/>
+<div class="top-ad">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1071465863344332"
+     data-ad-slot="4306465772"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <section class="content">
 <header>
 <h1>Magit</h1>
@@ -57,16 +68,16 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org9cae163">magit-status</a></li>
-<li><a href="#orgbfb5375">Stage</a></li>
-<li><a href="#org5b3ab57">Commit</a></li>
-<li><a href="#org89ca5dd">Log</a></li>
-<li><a href="#org3ffd52b">Push</a></li>
-<li><a href="#orgf1efa61">Pull</a></li>
-<li><a href="#org22f31d9">Branch</a></li>
-<li><a href="#org6db9805">Reset or Revert</a></li>
-<li><a href="#orgf0a60a2">기타</a></li>
-<li><a href="#org975b76a">관련된 글들</a></li>
+<li><a href="#orgcba7c35">magit-status</a></li>
+<li><a href="#orge748ad5">Stage</a></li>
+<li><a href="#org2bd5e2a">Commit</a></li>
+<li><a href="#orgec53261">Log</a></li>
+<li><a href="#org9e898b5">Push</a></li>
+<li><a href="#org5a22638">Pull</a></li>
+<li><a href="#org87507d5">Branch</a></li>
+<li><a href="#orgce8db63">Reset or Revert</a></li>
+<li><a href="#orgac19a16">기타</a></li>
+<li><a href="#org36fbeaa">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -87,9 +98,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 <a href="spacemacs.html">Spacemacs</a>용으로 커스터마이징 된
 단축키를 위주로 정리한다.
 </p>
-<div id="outline-container-org9cae163" class="outline-2">
-<h2 id="org9cae163">magit-status</h2>
-<div class="outline-text-2" id="text-org9cae163">
+<div id="outline-container-orgcba7c35" class="outline-2">
+<h2 id="orgcba7c35">magit-status</h2>
+<div class="outline-text-2" id="text-orgcba7c35">
 <p>
 현재 상태를 표시하는 UI를 띄운다.
 개인적으로 magit 을 시작하는 가장 좋은 방법으로 사용한다.
@@ -111,9 +122,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgbfb5375" class="outline-2">
-<h2 id="orgbfb5375">Stage</h2>
-<div class="outline-text-2" id="text-orgbfb5375">
+<div id="outline-container-orge748ad5" class="outline-2">
+<h2 id="orge748ad5">Stage</h2>
+<div class="outline-text-2" id="text-orge748ad5">
 <p>
 수정된 파일을 선택하고 <code>s</code> 를 누르면 스테이지가 된다.
 각 수정 내역에서 <code>TAB</code> 을 누르면 간단한 diff를 볼 수 있는데
@@ -126,9 +137,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org5b3ab57" class="outline-2">
-<h2 id="org5b3ab57">Commit</h2>
-<div class="outline-text-2" id="text-org5b3ab57">
+<div id="outline-container-org2bd5e2a" class="outline-2">
+<h2 id="org2bd5e2a">Commit</h2>
+<div class="outline-text-2" id="text-org2bd5e2a">
 <p>
 <code>c c</code> 를 누르면 커밋 모드로 바뀐다.
 스테이지 된 파일들의 간략한 변경점을 볼 수 있으며
@@ -144,9 +155,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org89ca5dd" class="outline-2">
-<h2 id="org89ca5dd">Log</h2>
-<div class="outline-text-2" id="text-org89ca5dd">
+<div id="outline-container-orgec53261" class="outline-2">
+<h2 id="orgec53261">Log</h2>
+<div class="outline-text-2" id="text-orgec53261">
 <p>
 <code>l l</code> 을 이용하면 로그를 볼 수 있다.
 </p>
@@ -156,25 +167,25 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org3ffd52b" class="outline-2">
-<h2 id="org3ffd52b">Push</h2>
-<div class="outline-text-2" id="text-org3ffd52b">
+<div id="outline-container-org9e898b5" class="outline-2">
+<h2 id="org9e898b5">Push</h2>
+<div class="outline-text-2" id="text-org9e898b5">
 <p>
 <code>p p</code> 를 이용하면 원격에 현재 브랜치 이름으로 푸시(push) 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgf1efa61" class="outline-2">
-<h2 id="orgf1efa61">Pull</h2>
-<div class="outline-text-2" id="text-orgf1efa61">
+<div id="outline-container-org5a22638" class="outline-2">
+<h2 id="org5a22638">Pull</h2>
+<div class="outline-text-2" id="text-org5a22638">
 <p>
 <code>F u</code> 를 이용하면 origin 에서 현재 브랜치로 풀(pull)이 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org22f31d9" class="outline-2">
-<h2 id="org22f31d9">Branch</h2>
-<div class="outline-text-2" id="text-org22f31d9">
+<div id="outline-container-org87507d5" class="outline-2">
+<h2 id="org87507d5">Branch</h2>
+<div class="outline-text-2" id="text-org87507d5">
 <dl class="org-dl">
 <dt><code>b c</code></dt><dd>브랜치 생성</dd>
 <dt><code>b b</code></dt><dd>브랜치 전환</dd>
@@ -182,26 +193,26 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </dl>
 </div>
 </div>
-<div id="outline-container-org6db9805" class="outline-2">
-<h2 id="org6db9805">Reset or Revert</h2>
-<div class="outline-text-2" id="text-org6db9805">
+<div id="outline-container-orgce8db63" class="outline-2">
+<h2 id="orgce8db63">Reset or Revert</h2>
+<div class="outline-text-2" id="text-orgce8db63">
 <p>
 <code>x</code> :: 변경 사항을 날리고 원래대로(HEAD) 돌린다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgf0a60a2" class="outline-2">
-<h2 id="orgf0a60a2">기타</h2>
-<div class="outline-text-2" id="text-orgf0a60a2">
+<div id="outline-container-orgac19a16" class="outline-2">
+<h2 id="orgac19a16">기타</h2>
+<div class="outline-text-2" id="text-orgac19a16">
 <ul class="org-ul">
 <li><code>magit-status</code> 에서 <code>$</code> 키를 누르면
 실제로 사용되는 커맨드 및 응답 등의 로그를 볼 수 있다.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org975b76a" class="outline-2">
-<h2 id="org975b76a">관련된 글들</h2>
-<div class="outline-text-2" id="text-org975b76a">
+<div id="outline-container-org36fbeaa" class="outline-2">
+<h2 id="org36fbeaa">관련된 글들</h2>
+<div class="outline-text-2" id="text-org36fbeaa">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">🌏 Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
 <li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">🌏 Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
